--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <app-root></app-root>
-
+  <app-example-form></app-example-form>
   <script src="/vendor/vendor.js"></script>
   <script src="/build/app.js"></script>
 </body>
